test/scc/type/semantic-errors/006.a
006.t:4:5: error: incomplete type is not allowed